src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-omT-dwF1000-dhP0.5-b-wfsBU-t.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BU\nconfig:\nwindow-rule {\n    open-fullscreen false\n    open-maximized true\n    default-column-width { fixed 1000; }\n    default-window-height { proportion 0.5; }\n    border { on; }\n    default-column-display \"tabbed\"\n}\n\nlayout {\n    tab-indicator {\n        place-within-column\n    }\n}"
expression: snapshot
---
initial configure:
size: 1231 × 328, bounds: 1231 × 680, states: []

post-map configures:
size: 1231 × 328, bounds: 1231 × 680, states: [Activated]
